--- a/main.html
+++ b/main.html
@@ -2,14 +2,25 @@
 <html lang="En">
   <head>
     <meta charset="UTF-8" />
-    <title>Pomodoro Timer</title>
+    <title>Leafy Focus</title>
     <link rel="stylesheet" type="text/css" href="main.css" title="style" />
+    <script src = "main.js"> </script>
   </head>
 
   <body>
-    <header>
-        <h1> Pomodoro Timer</h1>
-    </header>
+    <div class="header">
+      <nav>
+        <img src="C:\Users\triya\Projects\PomodoroTime\logo.png" class="logo">
+        <ul class= "nav-links">
+          <li><a href=""> Tasks </a></li>
+          <li><a href=""> About </a></li>
+          <li><a href=""> Settings </a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <img src = "C:\Users\triya\Projects\PomodoroTime\SitReadingDoodle.png">
+
     <div id = "cycles" class = "buttons"> 
         <button> Pomodoro </button>
         <button> Short Break </button>
@@ -17,6 +28,10 @@
     </div>
 
     <p> 25:00 </p>
+
+    <p> About</p>
+
+    <p> </p>
 
   </body>
 
