--- a/main.html
+++ b/main.html
@@ -9,17 +9,30 @@
 
   <body>
     <div class="header">
-      <nav>
+      <div class = "logo"> 
         <img src="C:\Users\triya\Projects\PomodoroTime\logo.png" class="logo">
-        <ul class= "nav-links">
-          <li><a href=""> Tasks </a></li>
-          <li><a href=""> About </a></li>
-          <li><a href=""> Settings </a></li>
-        </ul>
+      </div>
+
+      <div class="headings">
+        <a class="active" href="#tasks">Tasks</a>
+        <a href="#about">About</a>
+        <a href="#settings">Settings</a>
+      </div>
+      <!--
+      <nav>
+        <div class = "headings">
+          <ul>
+            <li class="active"><a href="#"> Tasks </a></li>
+            <li><a href="#"> About </a></li>
+            <li><a href="#"> Settings </a></li>
+          </ul>
+        </div>
       </nav>
+      -->
+
     </div>
 
-    <img src = "C:\Users\triya\Projects\PomodoroTime\SitReadingDoodle.png">
+    <!--<img src = "C:\Users\triya\Projects\PomodoroTime\SitReadingDoodle.png">-->
 
     <div id = "cycles" class = "buttons"> 
         <button> Pomodoro </button>
