--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
     <title>Leafy Focus</title>
     <link rel="stylesheet" type="text/css" href="main.css" title="style" />
     <script src = "main.js"> </script>
+    <script src="https://kit.fontawesome.com/4c58cb05f2.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <div class="header">
       <div class = "logo"> 
-        <img src="C:\Users\triya\Projects\PomodoroTime\logo.png" class="logo">
+        <img src="logo.png" class="logo">
       </div>
 
       <div class="headings">
@@ -18,32 +19,33 @@
         <a href="#about">About</a>
         <a href="#settings">Settings</a>
       </div>
-      <!--
-      <nav>
-        <div class = "headings">
-          <ul>
-            <li class="active"><a href="#"> Tasks </a></li>
-            <li><a href="#"> About </a></li>
-            <li><a href="#"> Settings </a></li>
-          </ul>
-        </div>
-      </nav>
-      -->
 
     </div>
 
-    <!--<img src = "C:\Users\triya\Projects\PomodoroTime\SitReadingDoodle.png">-->
-
-    <div id = "cycles" class = "buttons"> 
+    <!-- 
+    <div class="images">
+      <img id = "girl" src = "Open Doodles - Thinking Out Loud.png">
+      <img id = "girl2" src = "Open Doodles - In Good Company.png">
+      <img id = "girl3" src = "Open Doodles - Focused.png">
+      <img id = "girl4" src = "Open Doodles - Stuff To Do.png">
+    </div>
+    -->
+    <div class="rectangle">
+      <div class="modes"> 
         <button> Pomodoro </button>
         <button> Short Break </button>
         <button> Long Break </button>
+      </div>
     </div>
+ 
+    <p id = "countdown"></p>
 
     <p> 25:00 </p>
 
-    <p> About</p>
-
+    <i class="fa-regular fa-circle-pause fa-2xl"></i>
+    <i class="fa-regular fa-circle-play fa-2xl"></i>
+    <i class="fa-solid fa-rotate-right fa-2xl" style="color: #545f73;"></i>
+    <i class="fa-solid fa-arrow-rotate-left fa-2xl"></i>
     <p> </p>
 
   </body>
