--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <div class = "logo"> 
-        <img src="logo.png" class="logo">
+        <img src="images\logo.png" class="logo">
       </div>
 
       <div class="headings">
@@ -24,10 +24,10 @@
 
     <!-- 
     <div class="images">
-      <img id = "girl" src = "Open Doodles - Thinking Out Loud.png">
-      <img id = "girl2" src = "Open Doodles - In Good Company.png">
-      <img id = "girl3" src = "Open Doodles - Focused.png">
-      <img id = "girl4" src = "Open Doodles - Stuff To Do.png">
+      <img id = "girl" src = "images\Open Doodles - Thinking Out Loud.png">
+      <img id = "girl2" src = "images\Open Doodles - In Good Company.png">
+      <img id = "girl3" src = "images\Open Doodles - Focused.png">
+      <img id = "girl4" src = "images\Open Doodles - Stuff To Do.png">
     </div>
     -->
     <div class="rectangle">
@@ -44,6 +44,7 @@
 
     <i class="fa-regular fa-circle-pause fa-2xl"></i>
     <i class="fa-regular fa-circle-play fa-2xl"></i>
+    <!--colour example-->
     <i class="fa-solid fa-rotate-right fa-2xl" style="color: #545f73;"></i>
     <i class="fa-solid fa-arrow-rotate-left fa-2xl"></i>
     <p> </p>
